--- a/test-embed.html
+++ b/test-embed.html
@@ -82,5 +82,14 @@
         data-project="demo-project-456"
         data-position="bottom-right">
     </script>
+    
+    <script>
+        // Optional: Test the embed script loading
+        window.addEventListener('load', function() {
+            console.log('🚀 Test page loaded - chat widget should appear in bottom-right corner');
+            console.log('📡 Widget URL: https://407747c2.chat-widget-b54.pages.dev');
+            console.log('🔧 Worker URL: https://chat-worker.m-6bb.workers.dev');
+        });
+    </script>
 </body>
 </html> 
